--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,19 @@
+import java.text.SimpleDateFormat
+
 plugins {
     id 'java'
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
-mainClassName = 'randedt.MainCaller'
+def projectName = 'notes'
+group 'com.github.wnebyte'
+version '0.0.2'
 
-javafx {
-    version = "12.0.1"
-    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
-}
+mainClassName = 'com.github.wnebyte.notes.Notes'
+
+sourceCompatibility = "1.8";
+targetCompatibility = "1.8";
+
 
 sourceSets {
     main {
@@ -21,27 +25,37 @@ sourceSets {
             includes = ["**/*.fxml", "**/*.css", "**/*.png", "**/*.txt"]
         }
     }
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'randedt.MainCaller',
-                'Name': 'RandEdt',
-                'Specification-Title':'RandEdt Classes',
-                'Specification-Version': '1.0.1')
-    }
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    test {
+        java {
+            srcDirs = ["src/test/java"]
+        }
+        resources {
+            srcDirs = ["src/test/resources"]
+        }
     }
 }
-
 
 repositories {
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.1'
-    compile group: 'org.jetbrains', name: 'annotations', version: '16.0.1'
+    implementation group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.10.1'
+    implementation group: 'org.jetbrains', name: 'annotations', version: '16.0.1'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+}
+
+jar{
+    manifest{
+        attributes(
+                "Name": projectName,
+                "Implementation-Title": projectName,
+                "Implementation-Version": project.version,
+                "Class-Path": configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
+                'Build-Timestamp': new SimpleDateFormat("yyyy-MM-dd'T'HH:mm:ss.SSSZ").format(new Date()),
+                'Build-Jdk': "${System.properties['java.version']} (${System.properties['java.vendor']}) " +
+                        "${System.properties['java.vm.version']}"
+        )
+    }
+    archiveBaseName.set(projectName)
 }
